--- a/mainpage.dox
+++ b/mainpage.dox
@@ -1,41 +1,9 @@
 /**  */
 /**
-\mainpage HashBuckets library documentation.
+\mainpage EO-PSI protocol library documentation.
 
-Hash table for big integers modulo p, blind polynomial evaluation roots.
-<div style="margin-top: 5px;border-top: 1px dotted gray;">
-  Given a set of \f$n\f$ 80-bits numbers \f$a_1\f$, \f$a_2\f$, \f$\dots\f$, \f$a_n\f$, the algorithm can be described by the following points:
-  <ul>
-    <li><strong>Preprocessing</strong>. <i>Convert</i> the \f$n\f$ numbers up to 210-bits numbers.
-    We may do this just by appending \f$m\f$ bits 0 to the number.</li>
-    <li><strong>Hash to buckets</strong>. Create a hash table of \f$k\f$ buckets.
-    Each bucket can be loaded with at most \f$l\f$ numbers.
-    Obviously \f$n < kl\f$.
-    Insert all the preprocessed numbers to the hash table.
-    After having added all the numbers to the hash table, it may be useful to keep track of empty buckets, information which will be lost at the following step.</li>
-    <li><strong>Fill buckets</strong>. Each bucket of the hash table, which still has space left, will be filled in with randomly chosen up to 210-bits numbers.</li>
-    <li><strong>Generate polynomials</strong>. At this point each bucket of the hash table contains exactly \f$l\f$ elements.
-    Each bucket \f$b_i\f$ can be interpreted as a list of roots of the polynomial \f$p_i\f$.</li>
-    <li><strong>Evaluate polynomials</strong>. Generate a random vector \f$X\f$ of \f$2l + 1\f$ unknowns \f$x_j\f$.
-    Those unknowns will be used to evaluate polynomials.
-    The evaluation of each polynomial for all the elements of \f$X\f$ will be stored in a two-dimensional array \f$Y\f$.
-    \f{equation*}{
-      \forall y_{i,j} \in Y.\quad y_{i,j} = p_i \left(x_j\right)
-    \f}
-    </li>
-    <li><strong>Blind evaluations</strong>. From a single fixed (secret) key \f$s\f$, we generate \f$l\f$ keys with a pseudo-random generator \f$H\f$, based on \f$s\f$ and the index of the bucket in the hash table.
-    \f{equation*}{
-      s_i = H \left(s, i\right).
-    \f}
-    </li>
-    At this point we make use of a pseudo-random function \f$PRF_{s_i}\f$ which will be used to blind the values in \f$Y\f$ updating to \f$Y^{\prime}\f$.
-    \f{equation*}{
-      \begin{split}
-        r_{i,j} & = PRF_{s_i} \left(j\right) \\
-        y^{\prime}_{i,j} &= y_{i,j} + r_{i,j} \\
-      \end{split}
-    \f}
-    </li>
-  </ul>
-</div>
+<p>With this efficient set intersection protocol, (two) parties outsources both their set data and their intersection computation to the cloud in a completely private fashion.</p>
+<hr />
+<p>This implementation simulates the protocol with two clients and one cloud to appreciate its efficiency compared to other existing protocols.</p>
+<p>We stress the fact that privacy of original data is kept not only through the execution of the protocol but persists.</p>
 */ 
